[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/platformer/12-Live and Coins/Big Diamond Idle (18x14).png" type="Texture" id=1]
[ext_resource path="res://Assets/platformer/12-Live and Coins/Big Diamond Hit (18x14).png" type="Texture" id=2]
[ext_resource path="res://World/Items/Diamond.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 18, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 162, 0, 18, 14 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Hit",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 6.26009

[sub_resource type="Animation" id=15]
resource_name = "Disappear"
length = 3.0
step = 1.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="CircleShape2D" id=16]
radius = 6.72285

[node name="Diamond" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )
DISAPPEAR_TIMER = 2

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.15974, -8.15903 )
frames = SubResource( 13 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.0799904, -8.71896 )
shape = SubResource( 14 )

[node name="DiamondAnimator" type="AnimationPlayer" parent="."]
anims/Disappear = SubResource( 15 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0.123791, -8.66531 )
shape = SubResource( 16 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
